--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,6 +1,6 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{classpacking}{packing}} }{\pageref{classpacking}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classpacking}{packing}} \\*This is the packing base class. The rigidbody class inherits from it }{\pageref{classpacking}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_quaternion}{Quaternion}} }{\pageref{class_quaternion}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classrigidbody}{rigidbody}} }{\pageref{classrigidbody}}{}
 \end{DoxyCompactList}
