--- a/docs/latex/classrigidbody.tex
+++ b/docs/latex/classrigidbody.tex
@@ -95,9 +95,9 @@ void \mbox{\hyperlink{classrigidbody_ae7af1f93b40b47c9e855bcb0adb74434}{rigidbod
 
 
 \subsection{Detailed Description}
+The rigidbody class inherits from the packing class and contains functionality to simulate a packing experiement consisting of rigidbodies. 
 
-
-Definition at line 13 of file rigidbody.\+h.
+Definition at line 17 of file rigidbody.\+h.
 
 
 
