--- a/docs/latex/packing_8h.tex
+++ b/docs/latex/packing_8h.tex
@@ -9,4 +9,4 @@
 \begin{DoxyCompactItemize}
 \item 
 class \mbox{\hyperlink{classpacking}{packing}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em This is the packing base class. The rigidbody class inherits from it. \end{DoxyCompactList}\end{DoxyCompactItemize}
