--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -138,6 +138,8 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Quickstart Guide}
+\label{index}\hypertarget{index}{}\input{index}
 \chapter{Hierarchical Index}
 \input{hierarchy}
 \chapter{Class Index}
@@ -149,6 +151,7 @@
 \input{class_quaternion}
 \input{classrigidbody}
 \chapter{File Documentation}
+\input{homepage_8dox}
 \input{packing_8cpp}
 \input{packing_8h}
 \input{packing__meas_8cpp}
